# spend-pal

./: .gitignore  README.md  app.py  config.py  database.py  landing_page.ipynb  logic.py  models.py  nixpacks.toml  pyproject.toml  requirements.txt  server.py  test.py  utils.py  working_sandbox.py
migrations/versions/: 3e6467493711_drop_all_tables_and_create_new_schema.py  c670c422fa47_add_current_reconciling_tx_id_to_users_.py  d6d7c1423fb2_add_id_column_to_transactions_table.py
models/: api.py  database.py
templates/: index.html
